# speedb-apps

./: README.md
1/: Cargo.toml
1/src/: main.rs
1/static/: index.html
