[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
actix-files = "0.6.5"
actix-multipart = "0.6.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sled = "0.34.7"
uuid = { version = "1.8.0", features = ["v4"] }
futures-util = "0.3.30"
sanitize-filename = "0.5.0"
mime = "0.3.17"
